# sonar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEX-PLAN.md  GNOME-HIG.md  README.md  TASKS.md  TODO.md  meson.build  whatsnew.md
.agent/skills/release/: SKILL.md
.agent/workflows/: release.md
.github/workflows/: update-flatpak.yml
data/: gschemas.compiled  io.github.tobagin.sonar.desktop.in  io.github.tobagin.sonar.gschema.xml.in  io.github.tobagin.sonar.metainfo.xml.in  meson.build
data/icons/: meson.build
data/ui/: main_window.blp  meson.build  mock_response_dialog.blp  preferences.blp  request_row.blp  shortcuts_dialog.blp  sonar.gresource.xml.in  statistics_dialog.blp
docs/: VERSION_MANAGEMENT.md
openspec/: project.md
openspec/changes/archive/2025-10-20-enhance-security-and-features/: COMPLETION_SUMMARY.md  PROGRESS.md  README.md  design.md  proposal.md
openspec/changes/archive/2025-10-20-enhance-security-and-features/specs/code-quality/: spec.md
openspec/changes/archive/2025-10-20-enhance-security-and-features/specs/request-filtering/: spec.md
openspec/changes/archive/2025-10-20-enhance-security-and-features/specs/webhook-authentication/: spec.md
openspec/changes/enhance-security-and-features/: FINAL_COMPLETION.md  FINDINGS.md  tasks.md
openspec/changes/enhance-security-and-features/specs/export-formats/: spec.md
openspec/changes/enhance-security-and-features/specs/performance-optimization/: spec.md
openspec/changes/enhance-security-and-features/specs/security-hardening/: spec.md
openspec/changes/reorganize-codebase-structure/: proposal.md  tasks.md
openspec/changes/reorganize-codebase-structure/specs/changelog-format/: spec.md
openspec/changes/reorganize-codebase-structure/specs/directory-structure/: spec.md
openspec/changes/reorganize-codebase-structure/specs/vala-naming/: spec.md
openspec/specs/changelog-format/: spec.md
openspec/specs/directory-structure/: spec.md
openspec/specs/vala-naming/: spec.md
packaging/: io.github.tobagin.sonar.devel.yml  io.github.tobagin.sonar.yml
po/: LINGUAS  pt_BR.po
scripts/: build.sh  requests.sh
src/: Application.vala  Config.vala.in  MainWindow.vala  application.vala  main_window.vala  meson.build  models.vala  preferences_dialog.vala  request_row.vala  server.vala  shortcuts_dialog.vala
src/components/: ComparisonManager.vala  FilterManager.vala  HistoryView.vala  TunnelController.vala
src/dialogs/: MockResponseDialog.vala  PreferencesDialog.vala  ShortcutsDialog.vala  StatisticsDialog.vala
src/managers/: MockManager.vala  RateLimiter.vala  SecurityManager.vala  Server.vala  Tunnel.vala
src/models/: Models.vala
src/utils/: ExportUtils.vala  ImportUtils.vala  RequestIndex.vala  SignatureValidator.vala  ValidationUtils.vala
tests/: benchmark_performance.vala  meson.build  test_import_export.vala  test_mock_server.vala  test_security.vala  test_signature_validation.vala
