# Install application icon (SVG)
install_data(
  join_paths('hicolor', 'scalable', 'apps', 'io.github.tobagin.sonar.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'),
  rename: app_id + '.svg'
)

# Install symbolic icons
install_data(
  join_paths('hicolor', 'scalable', 'actions', 'io.github.tobagin.sonar-filter-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'actions')
)